--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@ h1 {
 }
 ul {
     color: white;
+    font-size: 25px ;
+    
 }
 
 div {
     position: center;
-    padding-left: 25%
+    padding-left: 8%
 }
 
 input {
