--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(32, 89, 231);
+    overflow-x: hidden;
 }
 
 h1 {
@@ -9,17 +10,22 @@ h1 {
 ul {
     color: white;
     font-size: 25px ;
+    padding-left:1% ;
+    padding-right: 1%;
     
 }
 
+li {
+    border: 1px solid #ffffff;
+}
+
 div {
-    position: center;
-    padding-left: 8%
+    
 }
 
 input {
     border-radius: 10px ;
-    border: 1px solid #ffffff;
+    border: 2px solid #ffffff;
     box-sizing: border-box;
     font-size: 20px;
     width: 350px; 
