--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(32, 89, 231);
+    background-color: rgb(8, 20, 52);
     overflow-x: hidden;
 }
 
@@ -16,8 +16,10 @@ ul {
 }
 
 li {
-    border: 1px solid #ffffff;
+    border: 10px solid rgb(8, 20, 52);
     padding: 10px;
+    border-radius: 40px ;
+    background-color: rgb(5, 90, 186);
 }
 
 div {
